# AskCode

./: Jenkinsfile  Optumfile.yml  README.md  deploy.sh
backend/: Dockerfile  Dockerfile.test  Optumfile.yml  README.md  prestart.sh  pyproject.toml  sshd_config
backend/app/: main.py
backend/app/api/dependencies/: auth.py
backend/app/api/routes/: __init__.py
backend/app/core/: breakers.py  config.py  http.py  logger.py  metrics.py  tasks.py  tokens.py  tracing.py
backend/app/models/: core.py  ranking.py  skills.py  token.py  user.py
backend/app/models/domains/: ava.py  domains.py  health.py
backend/app/models/v0/: search.py
backend/app/models/v1/: search.py
backend/app/models/v2/: search.py
backend/app/patches/: azure_ad_verify_token.py
backend/app/ranking/: __init__.py  constants.py  ranking.py  score.py
backend/app/repositories/: base.py  domains.py  entities.py  golden.py  search.py
backend/app/skills/: __init__.py  registry.py
backend/app/skills/ava/: ava.py
backend/app/skills/healthlibrary/: health.py
backend/app/skills/myuhc/: benefits.py  (+2 more)
backend/docs/: ava-sequence.puml
backend/scripts/: format
backend/tests/: conftest.py  fixtures.py  test_search.py
backend/tests/data/: bne_bad.json  bne_valid.json  bne_valid_request.json  domains_valid.json  health_library_valid.json  ranking_mock.pickle  ranking_response.json  skill_registry_mock.yaml  vcm_valid_request.json  vcm_valid_response.json
backend/tests/repositories/: test_domains.py  test_entities.py  test_golden.py
backend/tests/skills/: test_ava.py  test_health.py  test_myuhc.py  test_optumbank.py  test_optumrx.py
(+123 files in other folders)
